<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="Title"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv_title"
        android:scaleType="centerCrop"
        android:src="@drawable/loading" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/image"
        android:layout_alignRight="@id/image"
        android:background="#AAff0000"
        android:padding="5dp"
        android:text="Thread"
        android:textColor="#fff"
        android:textSize="20sp" />
</RelativeLayout>