<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_image_view" />
</RelativeLayout>