...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#cc000000"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay">
...
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_web"
                    app:layout_constraintStart_toEndOf="@+id/img_owner_image"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Owner" />

                <ImageView
                    android:id="@+id/img_web"
...
