...
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/container"
        layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_body"
        app:behavior_hideable="true"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/bottom_sheets_usage"
            android:textColor="#fff"
...
