<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/icon_info"
        android:title="Info"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/icon_share"
        android:orderInCategory="1"
        android:title="Share"
        app:showAsAction="always" />
</menu>